Completely replaced old gymburgdorf webapp

--- a/gymburgdorf/templates/gymburgdorf/23h/home.html
+++ b/gymburgdorf/templates/gymburgdorf/23h/home.html
@@ -1,16 +1,25 @@
 {% extends 'gymburgdorf/23h/base.html' %}
 
-{% block menubar %}{% endblock menubar %}
+{% block menubar %}
+    <div class="row mb-3">
+        <div class="col-4">
+            <a class="text-white text-decoration-none" href="{% url 'gymburgdorf:home' %}"><i class="fas fa-arrow-left"></i> Zurück</a>
+        </div>
+        <div class="col-8 text-end">
+            Du bist eingeloggt als <strong>{{ user.username }}</strong>.
+        </div>
+    </div>
+{% endblock menubar %}
 
 {% block title %}Startseite{% endblock title %}
 
 {% block heading %}
-    <h1>23h</h1>
+    <h1>23h Klassentools</h1>
     <p>Du bist eingeloggt als <strong>{{ user.username }}</strong>. <a class="text-white" href="{% url 'gymburgdorf:23h-logout' %}">Ausloggen</a></p>
 {% endblock heading %}
             
-{% block content %}
-    <h2>Seiten</h2>
+{% block content %} 
+    <h2 class="mb-3">Seiten</h2>
     
     <a href="{% url 'gymburgdorf:23h-maturabooks' %}" class="btn btn-primary">Maturabücher</a>
     <a href="{% url 'gymburgdorf:23h-muluscollection' %}" class="btn btn-primary">MULUS-Sammlung</a>
