--- a/gymburgdorf/templates/gymburgdorf/23h/login.html
+++ b/gymburgdorf/templates/gymburgdorf/23h/login.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block menubar %}{% endblock menubar %}
+{% block backurl %}{% url 'gymburgdorf:home' %}{% endblock backurl %}
 
 {% block title %}Login{% endblock title %}
 
