--- a/gymburgdorf/templates/gymburgdorf/23h/base.html
+++ b/gymburgdorf/templates/gymburgdorf/23h/base.html
@@ -1,55 +1,18 @@
-<!DOCTYPE html>
-<html lang="de">
+{% extends 'gymburgdorf/base.html' %}
 
-    <head>
-        <title>23h - {% block title %}{% endblock title %}</title>
-        <meta name="description" content="Toolbox von Rafael Urben">
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width,initial-scale=0.8">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="theme-color" content="#000"/>
-
-        {% load static %}
-        <link rel="shortcut icon" type="image/x-icon" href="{% static "gymburgdorf/favicon.ico" %}">
-        <link rel="apple-touch-icon" href="{% static "gymburgdorf/favicon.ico" %}">
-        {% comment %}
-        <link rel="apple-touch-startup-image" href="{% static "gymburgdorf/images/logo.png" %}">
-        {% endcomment %}
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-
-        {% block extrahead %}{% endblock extrahead %}
-    </head>
-
-    <body class="bg-dark text-white">
-        <div class="m-4 bg-dark">
-            {% block menubar %}
-                <div class="row mb-3">
-                    <div class="col-4">
-                        <a class="text-white text-decoration-none" href="{% url 'gymburgdorf:23h' %}"><i class="fas fa-arrow-left"></i> Zurück</a>
-                    </div>
-                    <div class="col-8 text-end">
-                        Du bist eingeloggt als <strong>{{ user.username }}</strong>.
-                    </div>
-                </div>
-            {% endblock menubar %}
-            {% block heading %}{% endblock heading %}
-
-            {% if messages %}
-                <div class="my-3">
-                    {% for message in messages %}
-                        <div class="alert {{ message.tags }} alert-dismissible shadow fade show" role="alert">
-                            <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="alert"></button>
-                            {{ message | safe }}
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
-
-            {% block content %}{% endblock content %}
+{% block menubar %}
+    <div class="row mb-3">
+        <div class="col-4">
+            <a class="text-white text-decoration-none" href="{% block backurl %}{% url 'gymburgdorf:23h' %}{% endblock backurl %}"><i class="fas fa-arrow-left"></i> Zurück</a>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-        {% block scripts %}{% endblock scripts %}
-    </body>
-</html>
+        <div class="col-8 text-end">
+            {% if request.user.is_authenticated %}
+                Du bist eingeloggt als <strong>{{ user.username }}</strong>.
+            {% else %}
+                Du bist nicht eingeloggt.
+            {% endif %}
+        </div>
+    </div>
+{% endblock menubar %}
+
+{% block fulltitle %}{% block title %}{% endblock title %} - 23h - GymBurgdorf{% endblock fulltitle %}
