--- a/gymburgdorf/templates/gymburgdorf/base.html
+++ b/gymburgdorf/templates/gymburgdorf/base.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=0.8">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="theme-color" content="#000"/>
+        <link rel="manifest" href="{% url 'gymburgdorf:manifest' %}">
 
         {% load static %}
         <link rel="shortcut icon" type="image/x-icon" href="{% static "gymburgdorf/favicon.ico" %}">
