--- a/gymburgdorf/templates/gymburgdorf/23h/maturabooks.html
+++ b/gymburgdorf/templates/gymburgdorf/23h/maturabooks.html
@@ -3,7 +3,7 @@
 {% block title %}Maturbücher{% endblock title %}
 
 {% block heading %}
-    <h1>23h - Maturabücher</h1>
+    <h1>23h Maturabücher</h1>
 {% endblock heading %}
 
 {% block content %}
