--- a/gymburgdorf/templates/gymburgdorf/login.html
+++ b/gymburgdorf/templates/gymburgdorf/login.html
@@ -1,4 +1,4 @@
-{% extends 'gymburgdorf/23h/base.html' %}
+{% extends 'gymburgdorf/base.html' %}
 
 {% load static %}
 
@@ -7,14 +7,16 @@
 {% block title %}Login{% endblock title %}
 
 {% block heading %}
-    <h1>23h - Login</h1>
+    <h1>Login</h1>
 {% endblock heading %}
             
 
 {% block content %}
     <p>Bitte logge dich mit deinem @gymburgdorf.ch Google-Account ein:<br></p>
     
-    {% url 'gymburgdorf:23h' as homeurl %}
+    {% if not homeurl %}
+        {% url 'gymburgdorf:home' as homeurl %}
+    {% endif %}
     <div class="d-inline-block">
         <a class="btn btn-outline-white text-dark bg-white" href="{% url 'social-auth:begin' 'google-oauth2' %}?next={% firstof request.GET.next homeurl %}" role="button">
         <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="{% static 'account/logo_google-oauth2.svg' %}" />
