--- a/gymburgdorf/templates/gymburgdorf/23h/muluscollection.html
+++ b/gymburgdorf/templates/gymburgdorf/23h/muluscollection.html
@@ -11,7 +11,7 @@
 {% endblock extrahead %}
 
 {% block heading %}
-    <h1>23h - MULUS-Sammlung</h1>
+    <h1>23h MULUS-Sammlung</h1>
 {% endblock heading%}
                     
 {% block content %}
