--- a/gymburgdorf/templates/gymburgdorf/23h/home.html
+++ b/gymburgdorf/templates/gymburgdorf/23h/home.html
@@ -12,6 +12,7 @@
 {% block content %} 
     <h2 class="mb-3">Seiten</h2>
     
+    <a href="{% url 'gymburgdorf:23h-summaries' %}" class="btn btn-primary">Zusammenfassungen</a>
     <a href="{% url 'gymburgdorf:23h-maturabooks' %}" class="btn btn-primary">Maturabücher</a>
     <a href="{% url 'gymburgdorf:23h-muluscollection' %}" class="btn btn-primary">MULUS-Sammlung</a>
 {% endblock content %}
